--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,4 @@
-graft .
-prune .git
-prune app.egg-info
-prune .idea
-prune __pycache__
-exclude .gitignore
-global-exclude *.pyc
+graft app
+prune app/.git
+prune app/__pycache__
+global-exclude app/*.pyc
